objects/LLC_BI__DocClass__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>This field is optional and allows the user to provide a description of the placeholder.</description>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DocOwner__c</fullName>
        <description>This field is optional and allows the user to set the owner of a document in classic Document Manager.</description>
        <label>DocOwner</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Loan Ops</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Closer</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__DocType__c</fullName>
        <description>This field is not required, but an admin must populate it with some value. This field is equivalent to a category name for groups of placeholder records.</description>
        <label>DocType</label>
        <referenceTo>LLC_BI__DocType__c</referenceTo>
        <relationshipLabel>DocClass</relationshipLabel>
        <relationshipName>DocClass</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__docManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not required, but an admin must populate it with some value. This field provides the ID of the associated DocManager record for a given DocClass (placeholder).</description>
        <label>DocManager</label>
        <referenceTo>LLC_BI__DocManager__c</referenceTo>
        <relationshipLabel>DocClass</relationshipLabel>
        <relationshipName>DocClass</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is not currently used.</description>
        <externalId>true</externalId>
        <label>lookupId</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDOC__Industry__c</fullName>
        <description>This field is not currently used.</description>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DocClass</label>
    <nameField>
        <label>DocClass Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocClass</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>